<resources>
    <string name="app_name">InvBikeV1</string>
    <string name="title_activity_ekran_wyszukiwania">EkranWyszukiwania</string>
    
    <string name="Logo">InvBike</string>
    <string name="Name">Email</string>
    <string name="Haslo">Password</string>
    <string name="ButtonPomoc">Help!</string>
    <string name="ButtonPrzejscieMAEW">Login!</string>
    
    <string name="Wyloguj">Logout!</string>
    <string name="Szukaj">Shear</string>
    <string name="ButtonSzukaj">Szukaj</string>
    <string name="ButtonFiltry">Filtr</string>
    <string name="ButtonKalkulator">Rama</string>
    <string name="ButtonZlecenia">Task</string>
    <string name="title_activity_kalkulator">Kalkulator</string>
    <string name="title_activity_zlecenia">Zlecenia</string>
    <string name="title_activity_wyszukiwania">Wyszukiwania</string>

    <string name="Usun">Delete!</string>
    <string name="Dodaj">Add</string>

    <string name="Facet">BodyTypeA</string>
    <string name="Kobieta">BodyTypeB</string>
    <string name="DługoscA">DługośćA</string>
    <string name="DługoscB">DługośćB</string>
    <string name="DługoscC">DługośćC</string>
    <string name="ButtonDługosc">Długość</string>
    <string name="Rozmiar">Rozmiar ramy</string>
    <string name="Wroc">Back</string>
    <string name="title_activity_logowanie">Logowanie</string>

    <string name="Ilosc">Ilosc</string>
    <string name="I">2</string>
    <string name="Opis">Opis</string>
    <string name="O">O</string>
    <string name="Typ">Typ</string>
    <string name="T">T</string>
    <string name="Typroweru">Roweru</string>
    <string name="R">R</string>
    <string name="Nazwa">Nazwa</string>
    <string name="N">N</string>

</resources>